--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
 chroma-hnswlib==0.7.3
-chromadb==0.4.23
+chromadb
 click==8.1.7
 cohere==5.5.3
 colorama==0.4.6
